# snake-royale

./: Dockerfile  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml  tailwind.config.ts  tatus  vite.config.ts
.github/workflows/: ci.yml
backend/: Dockerfile  Makefile  README.md  dump_data.py  migrate.sql  pyproject.toml  snake_royale.db
backend/src/: config.py  main.py
backend/src/api/: routes.py
backend/src/db/: mock_db.py  repository.py  session.py
backend/src/models/: db.py  schemas.py
backend/src/utils/: password.py
backend/tests/: conftest.py  test_api.py
backend/tests_integration/: conftest.py  test_game_flow.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/api/: client.ts  mockApi.ts
frontend/src/components/: Leaderboard.tsx
frontend/src/components/auth/: AuthModal.tsx
frontend/src/components/game/: SnakeGame.tsx
frontend/src/components/spectator/: SpectatorView.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/game/: gameLogic.test.ts
frontend/src/pages/: Index.tsx
src/components/: Header.tsx  Leaderboard.tsx
src/components/game/: GameBoard.tsx  GameControls.tsx  SnakeGame.tsx
src/contexts/: AuthContext.tsx
src/game/: gameLogic.test.ts  gameLogic.ts
